h1. Changelog

h2. 0.6.1 - 2020-06-14

* Permit @aspect@ attribute to match exact widths/heights and decimal aspects.

h2. 0.6.0 - 2020-05-20

* For Txp 4.8.0+
* Register plugin tags on admin side so article previews work properly.
* Deprecate @display@ attribute in favour of @format@.
* Alter class assignments so class is always added to img tag.
* The @type@ attribute accepts a list of profile names, plus SMD_ALL and SMD_ACTIVE.
* Add @break@ and @breakclass@ attributes.
* Add @aspect@ attribute. Accepts @landscape@, @portrait@, @square@ or any custom ratio pairs, @4:3@, @16:9@, etc.
* Add @sort@ attribute.
* smd_thumbnail and smd_thumbnail_info tags accept core @escape@ attribute.
* Fix column heading width/height labels.
* Fix image counter when batch creating thumbs.
* Reinstate hover pointer on active column heading.
* Hook into image saves on the Write panel for compatibility with Write panel image plugins.

h2. 0.5.3 - 2019-10-23

* Fix unescaped @br@ tags in help (thanks, phiw13).

h2. 0.5.2 - 2019-09-17

* Added German Textpack (thanks, Christian Rapp)

h2. 0.5.1 - 2019-09-10

* Permit @wraptag@ when outputting display="url" (thanks, jools-r).
* Add @quiet@ attribute to suppress missing image warnings (thanks, jools-r).

h2. 0.5.0 - 2019-06-26

* For Textpattern 4.7.0+.
* Added @description@ field.
* Fall back on fullsize image if thumb doesn't exist.
* Try to create profile directories with the same permissions as the
images directory.
* Fix greedy thumb profile panel gobbling list options (thanks, phiw13).
* Fix toggle state recall (thanks, phiw13).
* Fix undefined variable warnings (thanks, philwareham).
* Fix search_method array-to-string conversion warning.
* Fix errors if tables not created when no images are in the database.
* Update documentation and code consistency (thanks, philwareham)

h2. 0.4.0 - 2017-07-18

* Added Composer/Packagist support.
* Removed SWF support.
* Tidied layout for 4.6/4.7 (thanks, philwareham)

h2. 0.33 - 2016-11-15
